--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="ja">
 <head>　
   <meta charset="utf-8">　
-  <title>IC STUDIO　「公式サイト」</title>　
+  <title>IC STUDIO　[公式サイト]</title>　
   <link rel="stylesheet" href="sample.css">
 </head>
-  <body>　
+  <body id="index"　
     <header>ヘッダー</header>　
     <nav>　
 <ul>　　
         <li><a href="index.html">Top</a></li>　　
-        <li><a href="about.html">News</a></li>　　
+      　<li class="nav-box"><a href="https://miya2021.github.io/anonymous/" class="nav-link hover">アニワス</a></li>
         <li><a href="access.html">staff&Cast</a></li>　　
         <li><a href="menu.html">Radio</a></li>　　
         <li><a href="contact.html">IC STUDIO</a></li>　
@@ -23,7 +23,7 @@
         </section>　
   </article>
         <footer>フッター</footer>
-      
+
 <small id="cc">©︎IC STUDIO・MIYA／IC文庫・黒薔薇製作委員会</small>
 </body>
 </html>
