--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
   <body id="index"　
     <header>ヘッダー</header>　
+　　 <h1><a href="index.html"><img src="ロゴ.jpg" alt="IC STUDIO"></a></h1>
     <nav>　
 <ul>　　
         <li><a href="index.html">Top</a></li>　　
-      　<li class="nav-box"><a href="https://miya2021.github.io/anonymous/" class="nav-link hover">アニワス</a></li>
+       　<li class="nav-box"><a href="https://miya2021.github.io/anonymous/" class="nav-link hover">アニワス</a></li>
         <li><a href="access.html">staff&Cast</a></li>　　
         <li><a href="menu.html">Radio</a></li>　　
         <li><a href="contact.html">IC STUDIO</a></li>　
