--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>IC STUDIO　[公式サイト]</title>　
   <link rel="stylesheet" href="sample.css">
 </head>
-  <body id="index"　
-    <header>ヘッダー</header>　
+<body id="index"> 
+<body background="/Users/miya/Documents/GitHub/IC-STUDIO/例　web背景.png">
   <article>　
         <h1>IC STUDIO</h1>　　
         <section>　　
@@ -14,8 +14,7 @@
         <p>TC STUDIOはインターネットで活動しているSTUDIOです</p>　　
         </section>　
   </article>
-        <footer>フッター</footer>
 
-<small id="cc">©︎IC STUDIO・MIYA／IC文庫・黒薔薇製作委員会</small>
+<small id="cc">©︎2021・MIYA/IC STUDIO</small>
 </body>
 </html>
