--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body id="index">
   <!-- #preloader -->
-<span class="IC STUDUI OF  WEBSITE"><span>I</span><span>C</span><span> S</span><span>T</span><span>U</span><span>D</span><span>I</span><span>O</span><span> o</span><span>f </span><span>W</span><span>e</span><span>b</span>
+<span class="IC STUDIO of Web"><span>I</span><span>C</span><span> S</span><span>T</span><span>U</span><span>D</span><span>I</span><span>O</span><span> o</span><span>f </span><span>W</span><span>e</span><span>b</span>
   <div id="main-visual">
     <div class="main-visual-box act">
       <p id="top-main-copy">
