--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 　　　　　　<source media="(max-width: 896px)" srcset="/Users/miya/Documents/GitHub/IC-STUDIO/スライス 1.png"
           　</picture>
           </p>
+          <img src="/Users/miya/Documents/GitHub/IC-STUDIO/スライス 1.png" class="w100">
     　  </div>
   　  </div>　　
   　<h2>ICSTUDIOとは</h2>　　
