--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="main-visual-box act">
       <p id="top-main-copy">
         <picture>
-　　　　　　<source media="(max-width: 896px)" srcset="/Users/miya/Documents/GitHub/IC-STUDIO/スライス 1.png"
+              <source media="(max-width: 896px)" srcset="/Users/miya/Documents/GitHub/IC-STUDIO/文章.png">
+              <img src="/Users/miya/Documents/GitHub/IC-STUDIO/文章.png" alt="19世紀のロンドンで起きた不明連続色々な探偵が動き始める" class="w100">
           　</picture>
           </p>
           <img src="/Users/miya/Documents/GitHub/IC-STUDIO/スライス 1.png" class="w100">
